stateDiagram-v2
    [*] --> TODO : POST /items

    TODO --> DOING : transition targetStatus DOING
    TODO --> DONE : atajo
    TODO --> SKIPPED : descartar

    DOING --> TODO : retroceder
    DOING --> DONE : completar
    DOING --> SKIPPED : descartar

    DONE --> TODO : reabrir

    SKIPPED --> TODO : reabrir

    DONE --> [*] : DELETE
    SKIPPED --> [*] : DELETE
    TODO --> [*] : DELETE
    DOING --> [*] : DELETE

    note right of DOING
        Cualquier transición no listada
        devuelve 409 Conflict
        code INVALID_STATE_TRANSITION
        details from to allowed
    end note
